Fixed hero section video on mobile

--- a/src/sections/heroSection/HeroSectionStyle.css
+++ b/src/sections/heroSection/HeroSectionStyle.css
@@ -3,6 +3,7 @@
   height: 91vh;
   width: 100vw;
   box-shadow: 0rem 0.1rem 0.7rem rgb(0, 0, 0);
+  overflow: hidden;
 }
 
 .hero-background video {
@@ -12,6 +13,7 @@
   height: 91vh;
   filter: brightness(50%);
   z-index: -2;
+  pointer-events: none;
 }
 
 .hero-teksts {
